--- a/src/demos/test.html
+++ b/src/demos/test.html
@@ -5,142 +5,44 @@
   <meta charset="utf-8">
   <title>菜鸟教程(runoob.com)</title>
   <style>
-    div.justify-content {
-      width: 500px;
-      height: 150px;
-      border: 1px solid #c3c3c3;
-      display: -webkit-flex;
-      /* Safari */
-      -webkit-justify-content: space-around;
-      /* Safari 6.1+ */
-      display: flex;
-      justify-content: space-around;
-    }
-
-    div.justify-content div {
-      width: 80px;
-      height: 80px;
-    }
-
-    /* Safari 6.1+ */
-    div#myRedDIV {
-      order: 2;
-      -webkit-order: 2;
-    }
-
-    div#myBlueDIV {
-      order: 4;
-      -webkit-order: 4;
-    }
-
-    div#myGreenDIV {
-      order: 3;
-      -webkit-order: 3;
-    }
-
-    div#myPinkDIV {
-      order: 1;
-      -webkit-order: 1;
-    }
-
-    div.flex {
-      width: 220px;
-      height: 300px;
-      border: 1px solid black;
-      display: flex;
-    }
-
-    div.flex div {
-      flex: 1;
-      -webkit-flex: 1;
-    }
-
-    div.flex-wrap {
+    div.transform {
       width: 200px;
-      height: 200px;
-      border: 1px solid #c3c3c3;
-      display: -webkit-flex;
-      /* Safari */
-      -webkit-flex-wrap: wrap;
-      /* Safari 6.1+ */
-      display: flex;
-      flex-wrap: wrap;
-      /* 元素内弹性盒元素的方向为相反的顺序 */
-      flex-direction: row-reverse;
-      -webkit-flex-direction: row-reverse;
-      /* Safari 6.1+ */
-      /* 让弹性盒的元素以相反的顺序显示，且在必要的时候进行拆行 */
-      flex-flow: row-reverse wrap;
-      -webkit-flex-flow: row-reverse wrap;
-    }
-
-    div.flex-wrap div {
-      width: 50px;
-      height: 50px;
-    }
-
-    div.flex-grow {
-      width: 350px;
       height: 100px;
-      border: 1px solid #c3c3c3;
-      display: flex;
+      background-color: yellow;
+      transform: rotate(7deg);
+      -ms-transform: rotate(7deg);
+      -webkit-transform: rotate(7deg);
     }
 
-    div.flex-grow div:nth-of-type(1) {
-      flex-grow: 1;
+    div.relative {
+      position: relative;
+      height: 200px;
+      width: 200px;
+      margin: 100px;
+      padding: 10px;
+      border: 1px solid black;
     }
 
-    div.flex-grow div:nth-of-type(2) {
-      flex-grow: 3;
-    }
-
-    div.flex-grow div:nth-of-type(3) {
-      flex-grow: 1;
-      -webkit-flex-basis: 80px;
-      flex-basis: 80px;
-    }
-
-    div.flex-grow div:nth-of-type(4) {
-      flex-grow: 1;
-    }
-
-    div.flex-grow div:nth-of-type(5) {
-      flex-grow: 1;
+    div.transform-origin {
+      padding: 50px;
+      position: absolute;
+      border: 1px solid black;
+      background-color: red;
+      transform: rotate(45deg);
+      transform-origin: 20% 40%;
+      -ms-transform: rotate(45deg);
+      -ms-transform-origin: 20% 40%;
+      -webkit-transform: rotate(45deg);
+      -webkit-transform-origin: 20% 40%;
     }
   </style>
 </head>
 
 <body>
-  <div class="justify-content">
-    <div style="background-color:coral;" id="myRedDIV">元素第1。order:2。</div>
-    <div style="background-color:lightblue;" id="myBlueDIV">元素第2。order:4。</div>
-    <div style="background-color:lightgreen;" id="myGreenDIV">元素第3。order:3。</div>
-    <div style="background-color:pink;" id="myPinkDIV">元素第4。order:1。</div>
+  <div class="transform">Hello</div>
+  <div class="relative">
+    <div class="transform-origin">HELLO</div>
   </div>
-  <br>
-  <div class="flex">
-    <div style="background-color:coral;">红色</div>
-    <div style="background-color:lightblue;">蓝色</div>
-    <div style="background-color:lightgreen;">带有更多内容的绿色 div</div>
-  </div>
-  <br>
-  <div class="flex-wrap">
-    <div style="background-color:coral;">A</div>
-    <div style="background-color:lightblue;">B</div>
-    <div style="background-color:khaki;">C</div>
-    <div style="background-color:pink;">D</div>
-    <div style="background-color:lightgrey;">E</div>
-    <div style="background-color:lightgreen;">F</div>
-  </div>
-  <br>
-  <div class="flex-grow">
-    <div style="background-color:coral;"></div>
-    <div style="background-color:lightblue;"></div>
-    <div style="background-color:khaki;"></div>
-    <div style="background-color:pink;"></div>
-    <div style="background-color:lightgrey;"></div>
-  </div>
-
 </body>
 
 </html>
