--- a/src/demos/vueDemo/test.html
+++ b/src/demos/vueDemo/test.html
@@ -7,74 +7,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.staticfile.org/jquery/2.0.0/jquery.min.js">
+  </script>
 </head>
 
 <body>
-  <div id="example-template">
-    <input :value="value" @input="input"></input>
-    {{value}}
-    <br>
-    <example-template :value2="value2" @input="input2" ></example-template>
-    {{value2}}
-  </div>
+  <div id="app">
 
-
-  <div id="example-render">
-    <example-render :value="value" @input="input"></example-render>
-    {{value}}
   </div>
 </body>
 <script>
-    Vue.component("example-template", {
-    props: ['value2'],
-    template:`<input :value="value2" @input="$emit('input',$event.target.value)"></input>`
-  });
-  new Vue({
-    el: "#example-template",
-    data: {
-      value: "666",
-      value2:"value2"
-    },
-    methods: {
-      input(event) {
-        this.value = event.target.value;
-      },
-      input2(value) {
-       console.log(value);
-        this.value2 =value;
-      }
-    },
-  });
-
-  Vue.component("example-render", {
-    props: ['value'],
-    render: function (createElement) {
-      var self = this
-      return createElement('input', {
-        domProps: {
-          value: self.value
-        },
-        on: {
-          input: function (event) {
-            self.$emit('input', event.target.value)
-          }
-        }
+  let showBtn = true;
+  if (showBtn) {
+      var btn=$('<button>Click me</button>')
+      btn.on('click',function(){
+        console.log("Clicked !");
       })
-    }
-  });
-  new Vue({
-    el: "#example-render",
-    data: {
-      value: "6666",
-    },
-    methods: {
-      input(value) {
-        console.log(value);
-        this.value = value;
-      }
-    },
-  });
+      $("#app").append(btn);
+  }
 </script>
+
 <style>
 
 </style>
