--- a/src/demos/test.html
+++ b/src/demos/test.html
@@ -12,65 +12,127 @@
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 
   <div id="app">
-    <h1>Hello App!</h1>
-    <p>
-      <!-- 使用 router-link 组件来导航. -->
-      <!-- 通过传入 `to` 属性指定链接. -->
-      <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
-      <router-link to="/foo">Go to Foo</router-link>
-      <router-link to="/bar">Go to Bar</router-link>
-    </p>
-    <!-- 路由出口 -->
-    <!-- 路由匹配到的组件将渲染在这里 -->
+    <button @click="handleRouter()">点击跳转</button>
     <router-view></router-view>
-    <v-home></v-home>
   </div>
   <script>
-    // 0. 如果使用模块化机制编程，导入Vue和VueRouter，要调用 Vue.use(VueRouter)
-
-    // 1. 定义 (路由) 组件。
-    // 可以从其他文件 import 进来
-    const Foo = {
-      template: '<div>foo</div>'
-    }
-    const Bar = {
-      template: '<div>bar</div>'
+    const Home = {
+      template: `
+    <div class="home">
+      <h2>Home {{ $route.params.id }}</h2>
+    </div>
+  `
     }
 
-    // 2. 定义路由
-    // 每个路由应该映射一个组件。 其中"component" 可以是
-    // 通过 Vue.extend() 创建的组件构造器，
-    // 或者，只是一个组件配置对象。
-    // 我们晚点再讨论嵌套路由。
-    const routes = [{
-        path: '/foo',
-        component: Foo
-      },
-      {
-        path: '/bar',
-        component: Bar
-      }
-    ]
+    const User = {
+      template: `
+    <div class="user">
+      <h2>User {{ $route.params.id }}</h2>
+      <router-view></router-view>
+    </div>
+  `
+    }
+    const UserHome = {
+      template: `
+    <div class="user">
+      <h2>UserHome {{ $route.params }}</h2>
+    </div>
+  `
+    }
+    const UserProfile = {
+      template: `
+    <div class="user">
+      <h2>UserProfile {{ $route.params }}</h2>
+    </div>
+  `
+    }
 
-    // 3. 创建 router 实例，然后传 `routes` 配置
-    // 你还可以传别的配置参数, 不过先这么简单着吧。
+    const UserPosts = {
+      template: `
+    <div class="user">
+      <h2>UserPosts {{ $route.params }}</h2>
+    </div>
+  `
+    }
     const router = new VueRouter({
-      routes // (缩写) 相当于 routes: routes
+      routes: [{
+          path: '/home',
+          component: Home,
+        },
+        {
+          path: '/user/:id',
+          component: User,
+          children: [
+            // 当 /user/:id 匹配成功，
+            // UserHome 会被渲染在 User 的 <router-view> 中
+            {
+              path: '',
+              component: UserHome
+            },
+            {
+              // 当 /user/:id/profile 匹配成功，
+              // UserProfile 会被渲染在 User 的 <router-view> 中
+              path: 'profile',
+              component: UserProfile
+            },
+            // {
+            //   // 当 /user/:id/posts 匹配成功
+            //   // UserPosts 会被渲染在 User 的 <router-view> 中
+            //   path: 'posts',
+            //   component: UserPosts
+            // },
+            //没有匹配到合适的子路由。如果你想要渲染点什么，可以提供一个 空的 子路由
+            {
+              path: '*',
+              component: UserHome
+            },
+          ]
+        }
+      ]
     })
 
-    // 4. 创建和挂载根实例。
-    // 记得要通过 router 配置参数注入路由，
-    // 从而让整个应用都有路由功能
-    import VHome from "home.vue";
-
-    const app = new Vue({
+    new Vue({
+      el: '#app',
       router,
-      components: {
-        VHome
-      }
-    }).$mount('#app')
+      data() {
+        return {
+          count: 0
+        }
 
-    // 现在，应用已经启动了
+      },
+      methods: {
+        handleRouter() {
+          // 字符串
+          // this.$router.push('home')
+          // // 对象
+          this.count++;
+          const count = this.count
+          // this.$router.replace({
+          //   path: `/home`
+          // })
+          router.replace({
+            path: `/home`
+          })
+          console.log(count)
+          return
+          // 命名的路由
+          // this.$router.push({
+          //   name: 'User',
+          //   params: {
+          //     userId: '123'
+          //   }
+          // })
+
+          // // 带查询参数，变成 /register?plan=private
+          // this.$router.push({
+          //   path: 'register',
+          //   query: {
+          //     plan: 'private'
+          //   }
+          // })
+        }
+      },
+    });
   </script>
 </body>
 
