--- a/src/demos/nodeDemo/index.html
+++ b/src/demos/nodeDemo/index.html
@@ -11,44 +11,45 @@
     <p>我的第一个段落。</p>
     <script>
         //批量合并数据
-        function mergeObjs(targetTable, mergeObjs, whereStr, uFields, iFields, isDelete) {
+        let mergeObjs = function (targetTable, mergeObjs, whereStr, uFields, iFields, isDelete) {
             let sql = "";
             let rowIndex = 1;
             sql = sql + `
-            ( `
+    ( `
             mergeObjs.forEach(mergeObj => {
                 sql = sql + `
-                (SELECT `;
+        SELECT  * FROM (SELECT `;
                 for (let index in mergeObj) {
-                    sql =sql+ ` '${mergeObj[index]}' AS  ${index},`;
+                    sql = sql + ` '${mergeObj[index]}' AS  ${index},`;
                 }
                 if (sql.endsWith(",")) {
-                    sql = sql.substring(0, sql.length - 1) + ") AS t_" + rowIndex + " UNION ";
+                    sql = sql.substring(0, sql.length - 1) + ") AS t_" + rowIndex + `
+        UNION ALL `;
                 }
                 rowIndex++;
             });
-            if (sql.endsWith(" UNION ")) {
-                sql =` ${sql.substring(0, sql.length - " UNION ".length)} 
-            ) AS sourceTable `;
+            if (sql.endsWith(" UNION ALL ")) {
+                sql = ` ${sql.substring(0, sql.length - " UNION ALL ".length)} 
+    ) AS sourceTable `;
             }
             let result = merge(targetTable, sql, whereStr, uFields, iFields, isDelete);
             return result;
         };
 
         //批量合并数据
-        function merge(targetTable, sourceTable, whereStr, uFields, iFields, isDelete) {
+        let merge =  function (targetTable, sourceTable, whereStr, uFields, iFields, isDelete) {
             //mergeObjs先插入临时表， 在
             let sql = "";
-            sql =sql+ `
-            MERGE INTO ${targetTable}  as T
-            USING  (Select  * From ${sourceTable}  ) as S 
-            ON 2>1 ${(typeof whereStr==='string'&&whereStr!=="")?whereStr:""}`
+            sql = sql + `
+    MERGE INTO ${targetTable}  AS T
+    USING  (SELECT  * FROM ${sourceTable}  ) as S 
+    ON 2>1 ${(typeof whereStr==='string'&&whereStr!=="")?whereStr:""}`
             //U匹对修改
             if (Array.isArray(uFields) && uFields !== []) {
                 sql = sql + `
-                WHEN MATCHED `
+        WHEN MATCHED `
                 sql = sql + `
-                Then UpDate set `
+        Then UpDate set `
                 for (let field of uFields) {
                     sql = sql + `T.${field}=S.${field} ,`;
                 }
@@ -59,9 +60,9 @@
             //I匹对新增
             if (Array.isArray(iFields) && iFields !== []) {
                 sql = sql + `
-                When Not Matched `;
+        When Not Matched BY TARGET `;
                 sql = sql + `
-                Then Insert(${ iFields.join(",")  })`;
+        Then Insert(${ iFields.join(",")  })`;
                 sql = sql + `Values(`;
                 for (let field of iFields) {
                     sql = sql + `S.${field} ,`;
@@ -72,7 +73,8 @@
             }
             if (isDelete) {
                 sql = sql + `
-                Then Delete`;
+        WHEN NOT MATCHED BY SOURCE
+        Then Delete`;
             }
             sql = sql + `;`;
             // logger.info(sql);
@@ -95,9 +97,10 @@
         let res = merge("targetTable", "sourceTable", " AND T.id=S.id", ["id", "name", "age"], ["id", "name", "age"],
             true);
         let res2 = mergeObjs("targetTable", objs, " AND T.id=S.id", ["id", "name", "age"], ["id", "name",
-            "age"], true);
+            "age"
+        ], true);
         console.log(res);
-         console.log(res2);
+        console.log(res2);
     </script>
 </body>
 
