--- a/src/notes/02vue/vue3.0/00.html
+++ b/src/notes/02vue/vue3.0/00.html
@@ -9,49 +9,24 @@
 </head>
 
 <body>
-  <div id="app">
-
-    <ul v-if="items.length">
-      <li v-for="item in items" v-if="item.isshow">
-        {{ item }}
-      </li>
-    </ul>
-    <p v-else>No items left!</p>
-
+  <div id="example-9">
+    <input v-model.lazy="message" placeholder="edit me" />
+    <p>Message length: {{ message.length }}</p>
+    <input v-model.number="age" type="number" />
+    <p>age is: {{ age }}</p>
+    <input v-model.trim="msg" />
+    <p>msg length: {{ msg.length }}</p>
   </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script>
-let app= new Vue({
-  el: "#app",
+
+let example9 = new Vue({
+  el: "#example-9",
   data: {
-    items: [
-      {
-        msg: "shenme",
-        id: 1,
-        isshow: true
-      },
-      {
-        msg: "dongxi",
-        id: 2,
-        isshow: true
-      },
-      {
-        msg: "nubi",
-        id: 4,
-        isshow: false
-      },
-      {
-        msg: "laji",
-        id: 5,
-        isshow: false
-      },
-      {
-        msg: "sb",
-        id: 8,
-        isshow: true
-      }
-    ]
+    message: "",
+    age: null,
+    msg: ""
   }
 });
 </script>
